syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.common.domain.proto";
option java_outer_classname = "RequestPacketProto";

message RequestPacket {
  int32 OpCode = 1;
  string AccessToken = 2;
  string InstanceId = 3;
  bytes Data = 4;
}